changes img paths

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <img src="src/img/slider__main-image.png" alt="" class="sld-main-img">
             <div class="elements">
                 <div class="element">
-                    <img src="/src/img/thumb-slider__image.png" alt="">
+                    <img src="src/img/thumb-slider__image.png" alt="">
                     <span>Опера VS Оперетта</span>
                 </div>
                 <div class="element">
-                    <img src="/src/img/cats/FELV-cat.jpg" alt="">
+                    <img src="src/img/cats/FELV-cat.jpg" alt="">
                     <span>Опера VS Оперетта</span>
                 </div>
                 <div class="element">
-                    <img src="/src/img/cats/two-different-breeds-of-cats-side-by-side-outdoors-in-the-garden.webp" alt="">
+                    <img src="src/img/cats/two-different-breeds-of-cats-side-by-side-outdoors-in-the-garden.webp" alt="">
                     <span>Опера VS Оперетта</span>
                 </div>
                 <div class="element">
-                    <img src="/src/img/thumb-slider__image.png" alt="">
+                    <img src="src/img/thumb-slider__image.png" alt="">
                     <span>Опера VS Оперетта</span>
                 </div>
             </div>
@@ -52,7 +52,7 @@
             <div class="block-header">
                 <h2>Афиша</h2>
                 <div class="header-control">
-                    <img class="cal-icon" src="/src/icons/calendar.svg" alt="">
+                    <img class="cal-icon" src="src/icons/calendar.svg" alt="">
                     <span>Все мероприятия</span>
                 </div>
             </div>
@@ -70,15 +70,15 @@
                         </div>
                         <div class="description-options">
                             <div class="option">
-                                <img src="/src/icons/music.svg" alt="">
+                                <img src="src/icons/music.svg" alt="">
                                 <span>Джаз</span>
                             </div>
                             <div class="option">
-                                <img src="/src/icons/time.svg" alt="">
+                                <img src="src/icons/time.svg" alt="">
                                 <span>19:00</span>
                             </div>
                             <div class="option">
-                                <img src="/src/icons/person.svg" alt="">
+                                <img src="src/icons/person.svg" alt="">
                                 <span>6+</span>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                         <span class="day">30</span>
                         <span class="month">июня</span>
                     </div>
-                    <img src="/src/img/thumb-slider__image.png" alt="">
+                    <img src="src/img/thumb-slider__image.png" alt="">
                     <div class="description">
                         <div class="descption-info">
                             <h3>Опера VS Оперетта</h3>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="description-options">
                             <div class="option">
-                                <img src="/src/icons/music.svg" alt="">
+                                <img src="src/icons/music.svg" alt="">
                                 <span>Классика</span>
                             </div>
                         </div>
@@ -140,4 +140,5 @@
     </main>
 </body>
 <script src="/script.js"></script>
+
 </html>
